@@ -7605,6 +7605,9 @@ coefficients are \kbd{RgX}s (arbitrary \kbd{GEN}s in fact), reduce them to
 coefficients are \kbd{RgX}s (arbitrary \kbd{GEN}s in fact), reduce them to
 \kbd{RgXQ}s (applying \kbd{grem} coefficientwise) in a \typ{VEC}.
 
+\fun{GEN}{RgXQV_RgXQ_mul}{GEN z, GEN x, GEN T} \kbd{z} multiplies the
+ \kbd{RgXQV} \kbd{z} by the scalar (\kbd{RgXQ}) \kbd{x}.
+
 \subsec{\kbd{RgXQX}}
 
 \fun{GEN}{RgXQX_red}{GEN z, GEN T} \kbd{z} a \typ{POL} whose
